done with this stupid class!!!